# prexy

./: .clangd  .gitignore  CMakeLists.txt  README.md  default.nix  dev_shell.sh  flake.nix  format.sh
dev/vscode/: launch.json  tasks.json
doc/: prexy_struct_template.h  struct_fn_template.h
include/: prexy.h  prexy_core.h  prexy_enum_to_cstr.h  prexy_struct_fprintf.h
prexylib/: CMakeLists.txt
prexylib/include/: prexy.h  prexy_core.h  prexy_define_struct.h  prexy_enum_to_cstr.h  prexy_struct_fprintf.h
ptl/: CMakeLists.txt  README.md
ptl/include/: ptl_compiler_extensions.h  ptl_slice.inc.h  ptl_util.h  ptl_vec.inc.h  ptl_vec_slice.inc.h
src/: CMakeLists.txt  main.c
src/include/: prexy.h
stage1/: default.nix  find_expand_includes.awk  prexy  prexy.awk  prexyp  unexpand.awk
test/: 00_smoketest.c  00_smoketest_prexy.h  01_enum.c  01_enum_prexy.h  02_struct.c  02_struct_prexy.h  03_enum_to_cstr.c  03_enum_to_cstr_prexy.h  04_struct_fprintf.c  04_struct_fprintf.c.stdout  04_struct_fprintf_prexy.h  05_attrs.c  05_attrs.c.stdout  05_attrs_prexy.h  05_tag.c  05_tag.c.stdout  05_tag_prexy.h  06_attr.c  06_attr_prexy.h  06_complex_attrs.c  06_complex_attrs_prexy.h  CMakeLists.txt  test.sh  test_runner.sh
test/lib_test/: CMakeLists.txt  lib00_smoketest_prexy.h
test/preproc/: 01_enum_prexy.h  02_struct_prexy.h  03_enum_to_cstr_prexy.h  05_tag.stdout  06_attr_prexy.h  CMakeLists.txt  test.sh
test/preproc_test/: 00_smoketest.c  01_enum.c  01_enum_prexy.h  02_struct.c  02_struct_prexy.h  03_enum_to_cstr.c  03_enum_to_cstr_prexy.h  04_struct_fprintf.c  04_struct_fprintf_prexy.h  05_tag.c  05_tag_prexy.h  06_attr.c  06_attr.stdout  06_attr_prexy.h  07_collection.inc.h  07_trait.c  07_trait.h  07_trait_prexy.h  08_codegen.h  08_trait_template_codegen.c  08_trait_template_codegen.stdout  08_trait_template_codegen_prexy.h  CMakeLists.txt  prexy_define_struct.h
test/ptl_test/: CMakeLists.txt  codegen_test_slice.c  codegen_test_vec.c  codegen_test_vec_slice.c  lib00_smoketest.c  test_slice.c  test_slice.h  test_slice_prexy.h  test_utils.h  test_vec.c  test_vec.h  test_vec_prexy.h  test_vec_slice.c  test_vec_slice.h  test_vec_slice_prexy.h  test_vec_template.h
